# toggl-api-sgu-csv

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-release.in  requirements-release.txt  requirements.txt  setup.cfg  setup.py  test.yaml  togglapi.py
.github/workflows/: python-package.yml  release.yaml  test.yml
data/: reports.json
docs/: test.yaml
old/: cli.py  test_lib.py
src/: __init__.py  __main__.py
src/cli/: __init__.py  sgucli.py
src/togglreports/: build.py  cli.py  cli_parser.py  config.py  core.py  lib.py  main.py  togglapi.py  utils.py
src/togglreports/cli/: cli.py
src/togglreports/core/: app.py  plugin_loader.py  protocols.py  report_factory.py
src/togglreports/data/: reports.json  reports_example.json
src/togglreports/plugins/: default.py  example.py  sgu.py
src/togglsgu/: __init__.py  __main__.py  config.py  main.py
src/togglsgu/cli/: __init__.py  cli.py  sgucli.py
src/togglsgu/lib/: lib.py
test/: test_lib.py
tests/: test_cli_parser.py  test_togglreports.py  test_utils.py
