[metadata]
name = togglreports
version = attr: togglreports.__version__
author = Rodrigo Mendonça
author_email = rodrigogr.mendonca@gmail.com
description = A simple project to automate the creation of reports using the Toggl API.
long_description = file:README.md
long_description_content_type= text/markdown,
url = TBA
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[flake8]
ignore = E501, W503
per-file-ignores = config.py:C901
exclude = .git,__pycache__,docs,dist,.venv

[options]
packages = 
	togglreports
	togglreports.core
	togglreports.plugins
package_dir = 
	= src
include_package_data = true
python_requires = >=3.9
install_requires =
    pandas >= 1.2.4
    requests >= 2.25.*
    datetime >= 2.7.*
    pyyaml >= 6.0
    argparse >= 1.3.*

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	pytest >= 6.2
	pytest-cov >= 2.0
	mypy >= 0.910
	flake8 >= 3.9
	tox >= 3.24

[options.package_data]
togglreports = py.typed

[options.entry_points]
console_scripts =
    togglReports=togglreports.main:main

[semantic_release]
version_variable = src/togglreports/__init__.py:__version__
version_source = tag
commit_changes = true
branch = main
upload_to_PyPI = true
upload_to_release = true
commit_version_number = true
